Last debug circle for now 2nd increment